[package]
name = "privaxy_Study"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "privaxy_program"
path = "src/server/main.rs"

[lib]
name = "privaxy_lib"
path = "src/server/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["time", "rt", "rt-multi-thread", "macros", "fs"] }
env_logger = "0.10.1"
reqwest = { version = "0.11.23", features = ["rustls-tls", "brotli", "gzip", "deflate", "json"] }
dirs = "5.0.1"
log = "0.4.20"
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
openssl = "0.10.62"
toml = "0.8.8"