[package]
name = "privaxy_Study"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "privaxy_program"
path = "src/server/main.rs"


[lib]
name = "privaxy_lib"
path = "src/server/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["time", "rt", "rt-multi-thread", "macros", "fs", "sync"] }
env_logger = "0.10.1"
reqwest = { version = "0.11.23", features = ["rustls-tls", "brotli", "gzip", "deflate", "json"] }
dirs = "5.0.1"
log = "0.4.20"
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
openssl = "0.10.62"
toml = "0.8.8"
wildmatch = "2.3.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
uluru = "3.0.0"
http = "1.0.0"
rustls = "0.20.7"
adblock = "0.6.0"
crossbeam-channel = "0.5.10"
include_dir = "0.7.3"
once_cell = "1.19.0"
regex = { version = "1.10.2", features = [] }
base64 = "0.21.5"
serde_json = "1.0.108"
futures = "0.3.30"
url = "2.5.0"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = "0.25.0"
tokio-rustls = "0.25.0"